snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha512
df482e9c9bb2100c70b2e47864accf3f8824418545e42abd3f541330b6afb7f31b914d5bbaf72547e744c44d86b10689194190ddf0eaa5ccf85814cb899f1c91